# mail_service_pomodoro

./: Makefile  client.py  main.py  pyproject.toml  service.py  settings.py  utils.py
