[project]
name = "pomodoro-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton Fayfer",email = "fayfer2004@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "black (>=25.1.0,<26.0.0)",
    "pydantic-settings (==2.8.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "alembic (==1.14.1)",
    "cffi (==1.17.1)",
    "cryptography (==44.0.1)",
    "ecdsa (==0.19.0)",
    "mako (==1.3.9)",
    "markupsafe (==3.0.2)",
    "pyasn1 (==0.4.8)",
    "pycparser (==2.22)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "rsa (==4.2)",
    "six (==1.17.0)",
    "idna (==3.10)",
    "sniffio (==1.3.1)",
    "typing-extensions (==4.12.2)",
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "pydantic-core (==2.27.2)",
    "pydantic (==2.10.6)",
    "response (>=0.5.0,<0.6.0)",
    "requests (>=2.32.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-twisted (>=1.14.3,<2.0.0)",
    "pytest-async (>=0.1.1,<0.2.0)",
    "twisted (>=24.11.0,<25.0.0)",
    "pytest-factoryboy (>=2.7.0,<3.0.0)",
    "faker (>=37.0.2,<38.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "celery (>=5.4.0,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"